mcqs added through js

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
   <div class="jumbotron">
     <h1 class="text-center text-primary">Welcome to Quiz</h1>
     <div class="quiz" id="quiz-body">
-      <div>
-        <h1>Birth date of Quid-e-Azam</h1>
-        <div>A:
-          <input type="radio" name="i" class="i"><br>B:
-          <input type="radio" name="i" class="i"><br>C:
-          <input type="radio" name="i" class="i"><br>
-        </div>
-      </div>
+<!--      <div>-->
+<!--        <h1>Birth date of Quid-e-Azam</h1>-->
+<!--        <div>A:-->
+<!--          <input type="radio" name="i" class="i"><br>B:-->
+<!--          <input type="radio" name="i" class="i"><br>C:-->
+<!--          <input type="radio" name="i" class="i"><br>-->
+<!--        </div>-->
+<!--      </div>-->
 
     </div>
   </div>
